--- a/testing/generative_ai/prompt_engineering/chat_gpt/expanding.ipynb
+++ b/testing/generative_ai/prompt_engineering/chat_gpt/expanding.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,18 +27,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_client():\n",
+    "    client = openai.OpenAI(\n",
+    "        api_key=os.environ.get(\"OPENAI_API_KEY\")    # Default, can leave arguments empty\n",
+    "    )\n",
+    "    return client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_completion(prompt, model=\"gpt-3.5-turbo\",temperature=0): # Andrew mentioned that the prompt/ completion paradigm is preferable for this class\n",
+    "    client = get_client()\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    "    response = openai.ChatCompletion.create(\n",
+    "    response = client.chat.completions.create(\n",
     "        model=model,\n",
     "        messages=messages,\n",
     "        temperature=temperature, # this is the degree of randomness of the model's output\n",
     "    )\n",
-    "    return response.choices[0].message[\"content\"]"
+    "    return response.choices[0].message.content"
    ]
   },
   {
@@ -50,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,9 +109,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dear Valued Customer,\n",
+      "\n",
+      "Thank you for taking the time to share your review with us. We appreciate your feedback and apologize for any inconvenience you may have experienced.\n",
+      "\n",
+      "We are sorry to hear about the price increase you noticed in December. We strive to provide competitive prices for our customers, and we understand your frustration. If you have any further concerns regarding pricing, we recommend reaching out to our customer service team who will be happy to assist you.\n",
+      "\n",
+      "We also appreciate your feedback regarding the base of the system. We continuously work to improve the quality of our products, and your comments will be taken into consideration for future enhancements.\n",
+      "\n",
+      "We apologize for any inconvenience caused by the motor issue you encountered. Our customer service team is available to assist you with any product-related concerns, even if the warranty has expired. Please feel free to contact them for further assistance.\n",
+      "\n",
+      "Thank you once again for your review. We value your feedback and will use it to improve our products and services. If you have any other questions or concerns, please do not hesitate to reach out to us.\n",
+      "\n",
+      "Best regards,\n",
+      "\n",
+      "AI customer agent\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "You are a customer service AI assistant.\n",
@@ -127,9 +163,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dear valued customer,\n",
+      "\n",
+      "Thank you for taking the time to share your review with us. We truly appreciate your feedback and apologize for any inconvenience you may have experienced.\n",
+      "\n",
+      "We are sorry to hear about the price increase you noticed in our 17 piece system during the month of December. We understand that this may have been disappointing for you. We strive to offer competitive prices and provide our customers with excellent value, so we apologize if you felt that the pricing was not fair.\n",
+      "\n",
+      "Regarding the quality of the base of the system, we appreciate your observations. We continuously work on improving our products and take customer feedback seriously. We will definitely take your comments into consideration for future enhancements.\n",
+      "\n",
+      "If you are experiencing any issues with the motor of your blender, we recommend reaching out to our customer service team for assistance. They will be able to provide you with guidance and support. \n",
+      "\n",
+      "Once again, we apologize for any inconvenience you may have encountered and appreciate your loyalty as a customer. If you have any further questions or concerns, please do not hesitate to contact our customer service team.\n",
+      "\n",
+      "Thank you for choosing our brand and we hope to serve you better in the future.\n",
+      "\n",
+      "Best regards,\n",
+      "\n",
+      "AI customer agent\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "You are a customer service AI assistant.\n",
@@ -152,8 +212,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ML-Pipeline",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
