--- a/testing/generative_ai/prompt_engineering/chat_gpt/guidelines.ipynb
+++ b/testing/generative_ai/prompt_engineering/chat_gpt/guidelines.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,18 +32,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_client():\n",
+    "    client = openai.OpenAI(\n",
+    "        api_key=os.environ.get(\"OPENAI_API_KEY\")    # Default, can leave arguments empty\n",
+    "    )\n",
+    "    return client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
+    "    client = get_client()\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    "    response = openai.ChatCompletion.create(\n",
+    "    response = client.chat.completions.create(\n",
     "        model=model,\n",
     "        messages=messages,\n",
     "        temperature=0, # this is the degree of randomness of the model's output\n",
     "    )\n",
-    "    return response.choices[0].message[\"content\"]"
+    "    return response.choices[0].message.content"
    ]
   },
   {
@@ -62,9 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To guide a model towards the desired output and reduce irrelevant or incorrect responses, it is important to provide clear and specific instructions, which can be achieved through longer prompts that offer more clarity and context.\n"
+     ]
+    }
+   ],
    "source": [
     "text = f\"\"\"\n",
     "You should express what you want a model to do by \\ \n",
@@ -97,9 +119,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"books\": [\n",
+      "    {\n",
+      "      \"book_id\": 1,\n",
+      "      \"title\": \"The Enigma of Elysium\",\n",
+      "      \"author\": \"Evelyn Sinclair\",\n",
+      "      \"genre\": \"Mystery\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"book_id\": 2,\n",
+      "      \"title\": \"Whispers in the Wind\",\n",
+      "      \"author\": \"Nathaniel Blackwood\",\n",
+      "      \"genre\": \"Fantasy\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"book_id\": 3,\n",
+      "      \"title\": \"Echoes of the Past\",\n",
+      "      \"author\": \"Amelia Hart\",\n",
+      "      \"genre\": \"Romance\"\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Generate a list of three made-up book titles along \\ \n",
@@ -120,9 +171,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completion for Text 1:\n",
+      "Step 1 - Get some water boiling.\n",
+      "Step 2 - Grab a cup and put a tea bag in it.\n",
+      "Step 3 - Once the water is hot enough, pour it over the tea bag.\n",
+      "Step 4 - Let the tea steep for a bit.\n",
+      "Step 5 - After a few minutes, take out the tea bag.\n",
+      "Step 6 - Add sugar or milk to taste, if desired.\n",
+      "Step 7 - Enjoy your delicious cup of tea.\n"
+     ]
+    }
+   ],
    "source": [
     "text_1 = f\"\"\"\n",
     "Making a cup of tea is easy! First, you need to get some \\ \n",
@@ -157,9 +223,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completion for Text 2:\n",
+      "No steps provided.\n"
+     ]
+    }
+   ],
    "source": [
     "text_2 = f\"\"\"\n",
     "The sun is shining brightly today, and the birds are \\\n",
@@ -201,9 +276,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<grandparent>: Resilience is like a mighty oak tree that withstands the strongest storms, bending but never breaking. It is the unwavering determination to rise again after every fall, and the ability to find strength in the face of adversity. Just as a diamond is formed under immense pressure, resilience is forged through challenges and hardships, making us stronger and more resilient in the process.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to answer in a consistent style.\n",
@@ -232,9 +315,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completion for prompt 1:\n",
+      "1 - Jack and Jill, siblings, go on a quest to fetch water from a hilltop well, but encounter misfortune when Jack trips on a stone and tumbles down the hill, with Jill following suit, yet they return home and remain undeterred in their adventurous spirits.\n",
+      "\n",
+      "2 - Jack et Jill, frère et sœur, partent en quête d'eau d'un puits au sommet d'une colline, mais rencontrent un malheur lorsque Jack trébuche sur une pierre et dévale la colline, suivi par Jill, pourtant ils rentrent chez eux et restent inébranlables dans leur esprit d'aventure.\n",
+      "\n",
+      "3 - Jack, Jill\n",
+      "\n",
+      "4 - {\n",
+      "  \"french_summary\": \"Jack et Jill, frère et sœur, partent en quête d'eau d'un puits au sommet d'une colline, mais rencontrent un malheur lorsque Jack trébuche sur une pierre et dévale la colline, suivi par Jill, pourtant ils rentrent chez eux et restent inébranlables dans leur esprit d'aventure.\",\n",
+      "  \"num_names\": 2\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "text = f\"\"\"\n",
     "In a charming village, siblings Jack and Jill set out on \\ \n",
@@ -276,9 +377,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Completion for prompt 2:\n",
+      "Summary: Jack and Jill, siblings from a charming village, go on a quest to fetch water from a hilltop well, but encounter misfortune when Jack trips on a stone and tumbles down the hill, with Jill following suit, yet they remain undeterred and continue exploring with delight.\n",
+      "\n",
+      "Translation: Jack et Jill, frère et sœur d'un charmant village, partent à la recherche d'eau d'un puits au sommet d'une colline, mais rencontrent un malheur lorsque Jack trébuche sur une pierre et dévale la colline, suivi de Jill, pourtant ils restent déterminés et continuent à explorer avec joie.\n",
+      "\n",
+      "Names: Jack, Jill\n",
+      "\n",
+      "Output JSON: \n",
+      "{\n",
+      "  \"french_summary\": \"Jack et Jill, frère et sœur d'un charmant village, partent à la recherche d'eau d'un puits au sommet d'une colline, mais rencontrent un malheur lorsque Jack trébuche sur une pierre et dévale la colline, suivi de Jill, pourtant ils restent déterminés et continuent à explorer avec joie.\",\n",
+      "  \"num_names\": 2\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "prompt_2 = f\"\"\"\n",
     "Your task is to perform the following actions: \n",
@@ -312,9 +433,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The student's solution is correct. They correctly identified the costs for land, solar panels, and maintenance, and calculated the total cost as a function of the number of square feet.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Determine if the student's solution is correct or not.\n",
@@ -352,9 +481,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To calculate the total cost for the first year of operations, we need to add up the costs of land, solar panels, and maintenance.\n",
+      "\n",
+      "1. Land cost: $100 / square foot\n",
+      "The cost of land is $100 multiplied by the size of the installation in square feet.\n",
+      "\n",
+      "2. Solar panel cost: $250 / square foot\n",
+      "The cost of solar panels is $250 multiplied by the size of the installation in square feet.\n",
+      "\n",
+      "3. Maintenance cost: $100,000 + $10 / square foot\n",
+      "The maintenance cost is a flat fee of $100,000 per year, plus $10 multiplied by the size of the installation in square feet.\n",
+      "\n",
+      "Total cost: Land cost + Solar panel cost + Maintenance cost\n",
+      "\n",
+      "Let's calculate the total cost using the actual solution:\n",
+      "\n",
+      "Total cost = (100 * x) + (250 * x) + (100,000 + (10 * x))\n",
+      "           = 100x + 250x + 100,000 + 10x\n",
+      "           = 360x + 100,000\n",
+      "\n",
+      "Is the student's solution the same as the actual solution just calculated:\n",
+      "No\n",
+      "\n",
+      "Student grade:\n",
+      "Incorrect\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to determine if the student's solution \\\n",
@@ -426,9 +586,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The AeroGlide UltraSlim Smart Toothbrush by Boie is a technologically advanced toothbrush designed to provide a superior brushing experience. Boie is a company known for its innovative oral care products, and the AeroGlide UltraSlim Smart Toothbrush is no exception.\n",
+      "\n",
+      "One of the standout features of this toothbrush is its ultra-slim design. The brush head is only 2mm thick, making it much thinner than traditional toothbrushes. This slim profile allows for better access to hard-to-reach areas of the mouth, ensuring a thorough and effective clean.\n",
+      "\n",
+      "The AeroGlide UltraSlim Smart Toothbrush also incorporates smart technology. It connects to a mobile app via Bluetooth, allowing users to track their brushing habits and receive personalized recommendations for improving their oral hygiene routine. The app provides real-time feedback on brushing technique, duration, and coverage, helping users to achieve optimal oral health.\n",
+      "\n",
+      "The toothbrush features soft, antimicrobial bristles made from a durable thermoplastic elastomer. These bristles are gentle on the gums and teeth, while also being effective at removing plaque and debris. The antimicrobial properties of the bristles help to inhibit the growth of bacteria, keeping the brush clean and hygienic.\n",
+      "\n",
+      "In terms of battery life, the AeroGlide UltraSlim Smart Toothbrush boasts an impressive 30-day battery life on a single charge. This makes it convenient for travel and ensures that users don't have to worry about constantly recharging their toothbrush.\n",
+      "\n",
+      "Overall, the AeroGlide UltraSlim Smart Toothbrush by Boie offers a combination of advanced technology, sleek design, and effective cleaning. It is a great option for those looking to upgrade their oral care routine and achieve a healthier smile.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Tell me about AeroGlide UltraSlim Smart Toothbrush by Boie\n",
@@ -448,8 +626,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ML-Pipeline",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
