--- a/testing/generative_ai/prompt_engineering/chat_gpt/inferring.ipynb
+++ b/testing/generative_ai/prompt_engineering/chat_gpt/inferring.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,18 +27,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_client():\n",
+    "    client = openai.OpenAI(\n",
+    "        api_key=os.environ.get(\"OPENAI_API_KEY\")    # Default, can leave arguments empty\n",
+    "    )\n",
+    "    return client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
+    "    client = get_client()\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    "    response = openai.ChatCompletion.create(\n",
+    "    response = client.chat.completions.create(\n",
     "        model=model,\n",
     "        messages=messages,\n",
     "        temperature=0, # this is the degree of randomness of the model's output\n",
     "    )\n",
-    "    return response.choices[0].message[\"content\"]"
+    "    return response.choices[0].message.content"
    ]
   },
   {
@@ -50,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,9 +90,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sentiment of the product review is positive.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "What is the sentiment of the following product review, \n",
@@ -92,9 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "positive\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "What is the sentiment of the following product review, \n",
@@ -118,9 +148,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "satisfied, grateful, impressed, pleased, happy\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Identify a list of emotions that the writer of the \\\n",
@@ -143,9 +181,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Is the writer of the following review expressing anger?\\\n",
@@ -167,9 +213,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"Item\": \"lamp\",\n",
+      "  \"Brand\": \"Lumina\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Identify the following items from the review text: \n",
@@ -198,9 +255,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"Sentiment\": \"positive\",\n",
+      "  \"Anger\": false,\n",
+      "  \"Item\": \"lamp\",\n",
+      "  \"Brand\": \"Lumina\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Identify the following items from the review text: \n",
@@ -232,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,9 +344,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Government survey\n",
+      "2. Department satisfaction rating\n",
+      "3. NASA\n",
+      "4. Social Security Administration\n",
+      "5. Job satisfaction improvement\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Determine five topics that are being discussed in the \\\n",
@@ -294,16 +376,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1. Government survey\\n2. Department satisfaction rating\\n3. NASA\\n4. Social Security Administration\\n5. Job satisfaction improvement']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "response.split(sep=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,9 +415,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 0, 1, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Determine whether each item in the following list of \\\n",
@@ -343,19 +444,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALERT: New NASA story!\n"
+     ]
+    }
+   ],
    "source": [
-    "topic_dict = {i.split(': ')[0]: int(i.split(': ')[1]) for i in response.split(sep='\\n')}\n",
+    "response_list = response[1:len(response)-1].split(', ')\n",
+    "topic_dict = {}\n",
+    "for topic_index, topic in enumerate(topic_list):\n",
+    "    topic_dict[topic] = int(response_list[topic_index])\n",
+    "\n",
     "if topic_dict['nasa'] == 1:\n",
     "    print(\"ALERT: New NASA story!\")"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ML-Pipeline",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
