--- a/testing/generative_ai/prompt_engineering/chat_gpt/summarizing.ipynb
+++ b/testing/generative_ai/prompt_engineering/chat_gpt/summarizing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,18 +27,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_client():\n",
+    "    client = openai.OpenAI(\n",
+    "        api_key=os.environ.get(\"OPENAI_API_KEY\")    # Default, can leave arguments empty\n",
+    "    )\n",
+    "    return client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_completion(prompt, model=\"gpt-3.5-turbo\"): # Andrew mentioned that the prompt/ completion paradigm is preferable for this class\n",
+    "    client = get_client()\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    "    response = openai.ChatCompletion.create(\n",
+    "    response = client.chat.completions.create(\n",
     "        model=model,\n",
     "        messages=messages,\n",
     "        temperature=0, # this is the degree of randomness of the model's output\n",
     "    )\n",
-    "    return response.choices[0].message[\"content\"]\n"
+    "    return response.choices[0].message.content\n"
    ]
   },
   {
@@ -50,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,9 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This panda plush toy is loved by the reviewer's daughter, but they feel it is a bit small for the price.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to generate a short summary of a product \\\n",
@@ -102,9 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The customer is happy with the product but suggests offering larger options for the same price. They were pleasantly surprised by the early delivery.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to generate a short summary of a product \\\n",
@@ -131,9 +161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The customer loves the panda plush toy for its softness and cuteness, but feels it is overpriced compared to other options available.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to generate a short summary of a product \\\n",
@@ -169,9 +207,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The shipping department should take note that the product arrived a day earlier than expected.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to extract relevant information from \\ \n",
@@ -198,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,9 +324,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Soft and cute panda plush toy loved by daughter, but a bit small for the price. Arrived early. \n",
+      "\n",
+      "1 Great lamp with storage, fast delivery, excellent customer service, and easy assembly. Highly recommended. \n",
+      "\n",
+      "2 The reviewer recommends the electric toothbrush for its impressive battery life, but criticizes the small brush head. \n",
+      "\n",
+      "3 The reviewer found the price increase after the sale disappointing and noticed a decrease in quality. \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(len(reviews)):\n",
     "    prompt = f\"\"\"\n",
@@ -299,8 +360,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ML-Pipeline",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
