--- a/testing/generative_ai/prompt_engineering/chat_gpt/transforming.ipynb
+++ b/testing/generative_ai/prompt_engineering/chat_gpt/transforming.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,18 +28,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_client():\n",
+    "    client = openai.OpenAI(\n",
+    "        api_key=os.environ.get(\"OPENAI_API_KEY\")    # Default, can leave arguments empty\n",
+    "    )\n",
+    "    return client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_completion(prompt, model=\"gpt-3.5-turbo\", temperature=0): \n",
+    "    client = get_client()\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    "    response = openai.ChatCompletion.create(\n",
+    "    response = client.chat.completions.create(\n",
     "        model=model,\n",
     "        messages=messages,\n",
     "        temperature=temperature, \n",
     "    )\n",
-    "    return response.choices[0].message[\"content\"]"
+    "    return response.choices[0].message.content"
    ]
   },
   {
@@ -53,9 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola, me gustaría ordenar una licuadora.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Translate the following English text to Spanish: \\ \n",
@@ -67,9 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This language is French.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Tell me which language this is: \n",
@@ -81,9 +111,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "French: ```Je veux commander un ballon de basket```\n",
+      "Spanish: ```Quiero ordenar una pelota de baloncesto```\n",
+      "English: ```I want to order a basketball```\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Translate the following  text to French and Spanish\n",
@@ -96,9 +136,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formal: ¿Le gustaría ordenar una almohada?\n",
+      "Informal: ¿Te gustaría ordenar una almohada?\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Translate the following text to Spanish in both the \\\n",
@@ -119,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,15 +177,44 @@
     "  \"Mi monitor tiene píxeles que no se iluminan.\",              # My monitor has pixels that are not lighting\n",
     "  \"Il mio mouse non funziona\",                                 # My mouse is not working\n",
     "  \"Mój klawisz Ctrl jest zepsuty\",                             # My keyboard has a broken control key\n",
-    "  \"我的屏幕在闪烁\"                                               # My screen is flashing\n",
+    "  \"我的屏幕在闪烁\"                                              # My screen is flashing\n",
     "] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original message (The language is French.): La performance du système est plus lente que d'habitude.\n",
+      "The performance of the system is slower than usual.\n",
+      "\n",
+      "시스템의 성능이 평소보다 느립니다. \n",
+      "\n",
+      "Original message (The language is Spanish.): Mi monitor tiene píxeles que no se iluminan.\n",
+      "English: \"My monitor has pixels that do not light up.\"\n",
+      "\n",
+      "Korean: \"내 모니터에는 밝아지지 않는 픽셀이 있습니다.\" (Nae moniteoeneun balkaji-ji anhneun piksel-i issseumnida.) \n",
+      "\n",
+      "Original message (The language is Italian.): Il mio mouse non funziona\n",
+      "English: \"My mouse is not working.\"\n",
+      "Korean: \"내 마우스가 작동하지 않습니다.\" \n",
+      "\n",
+      "Original message (The language is Polish.): Mój klawisz Ctrl jest zepsuty\n",
+      "English: \"My Ctrl key is broken\"\n",
+      "Korean: \"내 Ctrl 키가 고장 났어요\" \n",
+      "\n",
+      "Original message (The language is Chinese.): 我的屏幕在闪烁\n",
+      "English: My screen is flickering.\n",
+      "Korean: 내 화면이 깜박거립니다. \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for issue in user_messages:\n",
     "    prompt = f\"Tell me what language this is: ```{issue}```\"\n",
@@ -176,9 +254,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dear Sir/Madam,\n",
+      "\n",
+      "I hope this letter finds you well. My name is Joe, and I am writing to bring your attention to a specification document regarding a standing lamp. \n",
+      "\n",
+      "I kindly request that you take a moment to review the attached document, as it provides detailed information about the features and specifications of the aforementioned standing lamp. \n",
+      "\n",
+      "Thank you for your time and consideration. I look forward to discussing this further with you.\n",
+      "\n",
+      "Yours sincerely,\n",
+      "Joe\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Translate the following from slang to a business letter: \n",
@@ -198,9 +293,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<!DOCTYPE html>\n",
+      "<html>\n",
+      "<head>\n",
+      "<style>\n",
+      "table {\n",
+      "  font-family: arial, sans-serif;\n",
+      "  border-collapse: collapse;\n",
+      "  width: 100%;\n",
+      "}\n",
+      "\n",
+      "td, th {\n",
+      "  border: 1px solid #dddddd;\n",
+      "  text-align: left;\n",
+      "  padding: 8px;\n",
+      "}\n",
+      "\n",
+      "tr:nth-child(even) {\n",
+      "  background-color: #dddddd;\n",
+      "}\n",
+      "</style>\n",
+      "</head>\n",
+      "<body>\n",
+      "\n",
+      "<h2>Restaurant Employees</h2>\n",
+      "\n",
+      "<table>\n",
+      "  <tr>\n",
+      "    <th>Name</th>\n",
+      "    <th>Email</th>\n",
+      "  </tr>\n",
+      "  <tr>\n",
+      "    <td>Shyam</td>\n",
+      "    <td>shyamjaiswal@gmail.com</td>\n",
+      "  </tr>\n",
+      "  <tr>\n",
+      "    <td>Bob</td>\n",
+      "    <td>bob32@gmail.com</td>\n",
+      "  </tr>\n",
+      "  <tr>\n",
+      "    <td>Jai</td>\n",
+      "    <td>jai87@gmail.com</td>\n",
+      "  </tr>\n",
+      "</table>\n",
+      "\n",
+      "</body>\n",
+      "</html>\n"
+     ]
+    }
+   ],
    "source": [
     "data_json = { \"resturant employees\" :[ \n",
     "    {\"name\":\"Shyam\", \"email\":\"shyamjaiswal@gmail.com\"},\n",
@@ -218,9 +366,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<!DOCTYPE html>\n",
+       "<html>\n",
+       "<head>\n",
+       "<style>\n",
+       "table {\n",
+       "  font-family: arial, sans-serif;\n",
+       "  border-collapse: collapse;\n",
+       "  width: 100%;\n",
+       "}\n",
+       "\n",
+       "td, th {\n",
+       "  border: 1px solid #dddddd;\n",
+       "  text-align: left;\n",
+       "  padding: 8px;\n",
+       "}\n",
+       "\n",
+       "tr:nth-child(even) {\n",
+       "  background-color: #dddddd;\n",
+       "}\n",
+       "</style>\n",
+       "</head>\n",
+       "<body>\n",
+       "\n",
+       "<h2>Restaurant Employees</h2>\n",
+       "\n",
+       "<table>\n",
+       "  <tr>\n",
+       "    <th>Name</th>\n",
+       "    <th>Email</th>\n",
+       "  </tr>\n",
+       "  <tr>\n",
+       "    <td>Shyam</td>\n",
+       "    <td>shyamjaiswal@gmail.com</td>\n",
+       "  </tr>\n",
+       "  <tr>\n",
+       "    <td>Bob</td>\n",
+       "    <td>bob32@gmail.com</td>\n",
+       "  </tr>\n",
+       "  <tr>\n",
+       "    <td>Jai</td>\n",
+       "    <td>jai87@gmail.com</td>\n",
+       "  </tr>\n",
+       "</table>\n",
+       "\n",
+       "</body>\n",
+       "</html>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import display, Markdown, Latex, HTML, JSON\n",
     "display(HTML(response))"
@@ -239,9 +445,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The girl with the black and white puppies has a ball.\n",
+      "No errors found.\n",
+      "No errors found.\n",
+      "There goes my freedom. They're going to bring their suitcases.\n",
+      "You're going to need your notebook.\n",
+      "That medicine affects my ability to sleep. Have you heard of the butterfly effect?\n",
+      "This phrase is to check chatGPT for spelling ability.\n"
+     ]
+    }
+   ],
    "source": [
     "text = [ \n",
     "  \"The girl with the black and white puppies have a ball.\",  # The girl has a ball.\n",
@@ -264,9 +484,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got this for my daughter for her birthday because she keeps taking mine from my room. Yes, adults also like pandas too. She takes it everywhere with her, and it's super soft and cute. However, one of the ears is a bit lower than the other, and I don't think that was designed to be asymmetrical. Additionally, it's a bit small for what I paid for it. I believe there might be other options that are bigger for the same price. On the positive side, it arrived a day earlier than expected, so I got to play with it myself before I gave it to my daughter.\n"
+     ]
+    }
+   ],
    "source": [
     "text = f\"\"\"\n",
     "Got this for my daughter for her birthday cuz she keeps taking \\\n",
@@ -285,9 +513,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Got this for my daughter for her birthday <span style='color:red;font-weight:700;text-decoration:line-through;'>cuz </span><span style='color:green;font-weight:700;'>because </span>she keeps taking mine from my <span style='color:red;font-weight:700;text-decoration:line-through;'>room.  </span><span style='color:green;font-weight:700;'>room. </span>Yes, adults also like pandas <span style='color:red;font-weight:700;text-decoration:line-through;'>too.  </span><span style='color:green;font-weight:700;'>too. </span>She takes it everywhere with her, and it's super soft and <span style='color:red;font-weight:700;text-decoration:line-through;'>cute.  One </span><span style='color:green;font-weight:700;'>cute. However, one </span>of the ears is a bit lower than the other, and I don't think that was designed to be asymmetrical. <span style='color:red;font-weight:700;text-decoration:line-through;'>It's </span><span style='color:green;font-weight:700;'>Additionally, it's </span>a bit small for what I paid for <span style='color:red;font-weight:700;text-decoration:line-through;'>it though. </span><span style='color:green;font-weight:700;'>it. </span>I <span style='color:red;font-weight:700;text-decoration:line-through;'>think </span><span style='color:green;font-weight:700;'>believe </span>there might be other options that are bigger for the same <span style='color:red;font-weight:700;text-decoration:line-through;'>price.  It </span><span style='color:green;font-weight:700;'>price. On the positive side, it </span>arrived a day earlier than expected, so I got to play with it myself before I gave it to my daughter."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from redlines import Redlines\n",
     "\n",
@@ -297,9 +538,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "**Review of a Panda Plush Toy: A Perfect Gift for All Ages**\n",
+       "\n",
+       "I purchased this delightful panda plush toy as a birthday gift for my daughter, who has a penchant for \"borrowing\" my belongings from my room. It is worth noting that pandas are not only adored by children but also by adults, and this toy certainly did not disappoint.\n",
+       "\n",
+       "The first thing that struck me about this plush toy is its exceptional softness and undeniable cuteness. Its irresistibly cuddly texture makes it the perfect companion for my daughter, who takes it everywhere she goes. However, I did notice a slight asymmetry in the ears, which I believe was not intentionally designed that way. While this does not detract from its overall appeal, it is worth mentioning for the sake of accuracy.\n",
+       "\n",
+       "In terms of size, I must admit that I expected a slightly larger toy considering its price. It is worth exploring other options that offer a more substantial size for the same price point. However, this minor setback did not overshadow the joy it brought to my daughter.\n",
+       "\n",
+       "Furthermore, I was pleasantly surprised when the package arrived a day earlier than expected. This unexpected early delivery allowed me to indulge in some quality playtime with the panda plush toy before presenting it to my daughter. The anticipation and excitement it generated were truly priceless.\n",
+       "\n",
+       "In conclusion, this panda plush toy is a delightful gift that transcends age boundaries. Its exceptional softness, undeniable cuteness, and portability make it a perfect companion for anyone, young or old. While there may be other options available in terms of size, the overall quality and joy it brings are undeniable. I highly recommend this panda plush toy as a gift that will undoubtedly bring smiles and warmth to the heart of its recipient."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "proofread and correct this review. Make it more compelling. \n",
@@ -313,8 +577,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ML-Pipeline",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
